test/invalid/NotOperatorNotDefinedForInteger/NotOperatorNotDefinedForInteger.plume
/**
 * Not operator is not defined for Integers.
 *
 * @author Diogo Marques, 30100
 */
class NotOperatorNotDefinedForInteger extends Object is
	
	method myMethod : () -> Boolean is
		!5